--- a/Exploratory_data_analysis_fahad.ipynb
+++ b/Exploratory_data_analysis_fahad.ipynb
@@ -1374,7 +1374,7 @@
     }
    ],
    "source": [
-    "k = 20\n",
+    "k = 21\n",
     "#Train Model and Predict  \n",
     "neigh = KNeighborsClassifier(n_neighbors = k).fit(X_train,y_train)\n",
     "neigh"
@@ -1403,9 +1403,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set Accuracy:  0.5093645948945617\n",
+      "Test set Accuracy:  0.4694143259626056\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train set Accuracy: \", metrics.accuracy_score(y_train, neigh.predict(X_train)))\n",
     "print(\"Test set Accuracy: \", metrics.accuracy_score(y_test, yhat))"
